--- a/maan/Add product .html
+++ b/maan/Add product .html
@@ -27,7 +27,7 @@
     
 
      </div>
-     <div class="line" ></div>
+     <div class="line m" ></div>
     <nav>
 
         <span><a href="#">الرئيسية</a></span>
