--- a/maan/login.html
+++ b/maan/login.html
@@ -22,7 +22,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.6);
   }
@@ -33,6 +33,7 @@
     padding: 20px;
     border: 1px solid #888;
     width: 50%;
+    cursor: default;
   }
   
   .close {
